# bica-stones

./: .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  docs.html  main.py  pyproject.toml  requirements.txt  test_api.py
api/: app.py  game_process.py  handlers.py  pyproject.toml  schemes.py  utils.py
api_tools/: handlers.py  schemes.py  utils.py
api_utils/: api.py  handlers.py
app/: game.py  handlers.py  keyboards.py  loops.py  messages.py  middleware.py  utils.py
bica_tempdata/: logs_7_1729889259.8398263.csv
data/: .gitignore  exception.py  exceptions.json  messages.json
database/: query.py  wrappers.py
database/creating_tables/: creating_tables.sql
test/: conftest.py  test_handlers.py  utils.py
